<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.academiaapp.ui.treino.TreinoFragment"
        android:label="@string/title_treino"
        tools:layout="@layout/fragment_treino" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.com.academiaapp.ui.dieta.DietaFragment"
        android:label="@string/title_dieta"
        tools:layout="@layout/fragment_dieta" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.com.academiaapp.ui.meta.MetaFragment"
        android:label="@string/title_meta"
        tools:layout="@layout/fragment_meta" >
    </fragment>
</navigation>