<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_rock"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC202020"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/titulo"
        style="@style/EstiloTitulo"
        android:text="@string/nome_do_aplicativo"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo">

        <LinearLayout
            android:id="@+id/go_treino"
            style="@style/BlocoDeInicio"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/alter"
                android:contentDescription="Icone de um alter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/merriweather"
                android:text="@string/treino"
                android:textAlignment="center"
                android:textColor="@color/bg_white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/go_dieta"
            style="@style/BlocoDeInicio"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/dieta"
                android:contentDescription="Icone de dieta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/merriweather"
                android:text="@string/dieta"
                android:textAlignment="center"
                android:textColor="@color/bg_white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/go_meta"
            style="@style/BlocoDeInicio"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/meta_button"
                android:contentDescription="Simbolo de meta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/merriweather"
                android:text="@string/meta"
                android:textAlignment="center"
                android:textColor="@color/bg_white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>